fix title overflow on firefox

--- a/src/renderer/components/item-list/item-table-list/columns/title-column.module.css
+++ b/src/renderer/components/item-list/item-table-list/columns/title-column.module.css
@@ -1,7 +1,7 @@
 .name-container {
     display: -webkit-inline-box;
     align-self: flex-start;
-    width: fit-content;
+    width: 100%;
     max-width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
